2-addons/manifests/gateway/hubble-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - hubble.localhost
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
