2-addons/manifests/gateway/prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: observability
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - prometheus.localhost
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
